Typo fixes, and added started Radial Currents

--- a/My_Notes/Bifurcation_thesis.tex
+++ b/My_Notes/Bifurcation_thesis.tex
@@ -44,6 +44,8 @@
 \setcounter{secnumdepth}{0}
 
 \title{Notes on \emph{Bifurcation Theory of the L-H Transition in Fusion Plasmas}}
+\author{}
+\date{}
 
 \begin{document}
 
@@ -97,7 +99,9 @@
   reduction mechanism?
 \item
   How does the bifurcation structure change when adding an extra
-  dynamical equation for turbulence? \textbf{AND} What is the best
+  dynamical equation for turbulence?
+\item
+  What is the best
   dynamical description of the turbulence reduction by sheared
   $\mathbf{E}\times\mathbf{B}$-flows?
 \end{itemize}
@@ -433,7 +437,7 @@ Plasmas}\label{chapter-4-bifurcation-theory-for-the-l-h-transition-in-magnetical
 \item
   The lowest-order system containing this co-dimension 3 bif. is the
   FitzHugh-Nagumo:
-  \[\dot{x} \,=\, -a - bx - x^3 + cy \\ \dot{y} \,=\, -x - y\]
+  \[\dot{x} \,=\, -a - bx - x^3 + cy ~~~~~~~ \dot{y} \,=\, -x - y\]
 
   \begin{itemize}
   \item
