Up to Stringer spin-up

--- a/My_Notes/Bifurcation_thesis.tex
+++ b/My_Notes/Bifurcation_thesis.tex
@@ -44,8 +44,8 @@
 \setcounter{secnumdepth}{0}
 
 \title{Notes on \emph{Bifurcation Theory of the L-H Transition in Fusion Plasmas}}
-\author{}
-\date{}
+\author{Original Author: Wolf Weymiens}
+\date{Originally Published: 1 January 2014}
 
 \begin{document}
 
