Started, need an abstract

--- a/Proposal/Proposal.tex
+++ b/Proposal/Proposal.tex
@@ -1,21 +1,53 @@
 \documentclass{article}
-\author{Kevin A. Blondino}
+\author{Kevin A. Blondino \\
+	Supervisor: Dr. H.J. de Blank}
 \title{Radial Electric Field-Generating Terms in L-H Transitions}
 \date{}
 
 \usepackage{fullpage,amsmath,natbib,graphicx,indentfirst}
 
+\usepackage{lipsum}
+
+\usepackage{xcolor}
+\newcommand\mynotes[1]{\textcolor{red}{#1}}
+
+%--------------------------------------
+
 \begin{document}
 \maketitle
-\section{Introduction}
-A test \cite{freidberg_ideal_1987}
-\section{Conclusion}
+
+%--------------------------------------
+
+\begin{abstract}
+	\mynotes{\lipsum[1]}
+	From the discovery of H-mode by ASDEX in 1982, inquiry of the transition mechanisms have become a topic of interest.
+\end{abstract}
+
+\section{Introduction and Background}
+In 1982, a new NBI system was install in the ASDEX tokamak, which pushed into a new realm.
+A new level of energy confinement time was achieved, typically a factor of 2 or more than previous.
+This state of operation was coined the high confinement (H-) mode, and is considered necessary for the future of nuclear fusion as an energy source \cite{wagner_development_1984}.
+
+The transport of particles and energy are dominated by turbulence \mynotes{CITE?}.
+The transition between low-confinement (L-) mode and H-mode is a bifurcation in the turbulent transport at the edge of the tokamak in a divertor setup.
+A key mechanism for the transition is the suppresion of this transport by the generation of a large radial electric field and the corresponding $\mathbf{E}\times\mathbf{B}$ flows and large flow shear near the edge.
+A plethora of individual mechanisms for the generation of such an electric field have been proposed, as most of which can be viewd as separate contributions in a radial Poisson's law.
+
+%--------------------------------------
+
+\section{Problem Statement}
+
+
+%--------------------------------------
+
+\section{Project Plan}
+
 
 %--------------------------------------
 
 % References
 %\newpage
 \bibliographystyle{plain}
-\nocite{*}
+%\nocite{*}
 \bibliography{../References/References}
 \end{document}
