--- a/References/References.bib
+++ b/References/References.bib
@@ -265,3 +265,18 @@
 	author = {Freidberg, Jeffrey},
 	year = {2007}
 }
+
+@article{wagner_development_1984,
+	title = {Development of an {Edge} {Transport} {Barrier} at the {H}-{Mode} {Transition} of {ASDEX}},
+	volume = {53},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.53.1453},
+	doi = {10.1103/PhysRevLett.53.1453},
+	abstract = {The thermal wave of a minor disruption can initiate the H phase of a neutral-beam-heated divertor tokamak discharge. Its propagation is used to probe the plasma edge conditions at the H transition. The results show the existence of a transport barrier which forms at the plasma edge and impedes the flow of particles and energy across the plasma surface, giving rise to improved confinement properties. Location and extension of the barrier coincide with the edge zone of increased shear specific to the divertor configuration.},
+	number = {15},
+	urldate = {2017-07-26},
+	journal = {Physical Review Letters},
+	author = {Wagner, F. and Fussmann, G. and Grave, T. and Keilhacker, M. and Kornherr, M. and Lackner, K. and McCormick, K. and Müller, E. R. and Stäbler, A. and Becker, G. and Bernhardi, K. and Ditte, U. and Eberhagen, A. and Gehre, O. and Gernhardt, J. and Gierke, G. v. and Glock, E. and Gruber, O. and Haas, G. and Hesse, M. and Janeschitz, G. and Karger, F. and Kissel, S. and Klüber, O. and Lisitano, G. and Mayer, H. M. and Meisel, D. and Mertens, V. and Murmann, H. and Poschenrieder, W. and Rapp, H. and Röhr, H. and Ryter, F. and Schneider, F. and Siller, G. and Smeulders, P. and Söldner, F. and Speth, E. and Steuer, K. -H. and Szymanski, Z. and Vollmer, O.},
+	month = oct,
+	year = {1984},
+	pages = {1453--1456}
+}
