--- a/References/References.bib
+++ b/References/References.bib
@@ -1,4 +1,75 @@
 
+@article{itoh_edge_1991,
+	title = {Edge localized mode activity as a limit cycle in tokamak plasmas},
+	volume = {67},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.67.2485},
+	doi = {10.1103/PhysRevLett.67.2485},
+	abstract = {A model of edge localized modes in tokamak plasmas is presented. A limit-cycle solution is found in the transport equation (time-dependent Ginzburg-Landau type), which has a hysteresis curve for the gradient versus the flux. A periodic oscillation of the particle outflux and an L-H intermediate state are predicted near the L-H transition boundary. A mesophase in spatial structure appears near the edge.},
+	number = {18},
+	urldate = {2017-07-27},
+	journal = {Physical Review Letters},
+	author = {Itoh, Sanae-I. and Itoh, Kimitaka and Fukuyama, Atsushi and Miura, Yukitoshi},
+	month = oct,
+	year = {1991},
+	pages = {2485--2488}
+}
+
+@article{itoh_model_1988,
+	title = {Model of {L} to {H}-{Mode} {Transition} in {Tokamak}},
+	volume = {60},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.60.2276},
+	doi = {10.1103/PhysRevLett.60.2276},
+	abstract = {A new model of L- to H-mode transition in tokamak plasmas is presented. Nonambipolar particle losses determine the consistent radial electric field near plasma periphery. A "cusp-type catastrophe" among the radial electric field, particle flux, and edge gradients is found. At the transition, plasma loss can take multiple values for one profile of density and temperature near the edge. A critical edge condition for the transition is obtained.},
+	number = {22},
+	urldate = {2017-07-27},
+	journal = {Physical Review Letters},
+	author = {Itoh, Sanae-I. and Itoh, Kimitaka},
+	month = may,
+	year = {1988},
+	pages = {2276--2279}
+}
+
+@article{zohm_dynamic_1994,
+	title = {Dynamic behavior of the {L}-{H} transition},
+	volume = {72},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.72.222},
+	doi = {10.1103/PhysRevLett.72.222},
+	abstract = {The dynamic behavior of the L-H transition in the ASDEX-Upgrade tokamak is described. We focus on the periodic L-H-L transitions known as ‘‘dithering H mode’’ and show that there is an intrinsic time scale in this process which is characteristic for the L-H transition. We give a tentative explanation for the phenomenon using an extension of Itoh’s model for the L-H transition and find that this simple bifurcation model can qualitatively explain many of the experimental observations. According to our model, the dithering cycles are a limit cycle oscillation due to a difference in the response of the system to a rise in either T or n. The implications for H-mode theories are discussed.},
+	number = {2},
+	urldate = {2017-07-27},
+	journal = {Physical Review Letters},
+	author = {Zohm, H.},
+	month = jan,
+	year = {1994},
+	pages = {222--225}
+}
+
+@phdthesis{staps_backstepping_2017,
+	address = {Eindhoven},
+	type = {Master's},
+	title = {Backstepping control of {H}-{L} confinement transition in fusion plasma model},
+	school = {Eindhoven University of Technology},
+	author = {Staps, T.J.A.},
+	month = feb,
+	year = {2017},
+	note = {ID 3NFA01}
+}
+
+@article{wagner_development_1984,
+	title = {Development of an {Edge} {Transport} {Barrier} at the {H}-{Mode} {Transition} of {ASDEX}},
+	volume = {53},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.53.1453},
+	doi = {10.1103/PhysRevLett.53.1453},
+	abstract = {The thermal wave of a minor disruption can initiate the H phase of a neutral-beam-heated divertor tokamak discharge. Its propagation is used to probe the plasma edge conditions at the H transition. The results show the existence of a transport barrier which forms at the plasma edge and impedes the flow of particles and energy across the plasma surface, giving rise to improved confinement properties. Location and extension of the barrier coincide with the edge zone of increased shear specific to the divertor configuration.},
+	number = {15},
+	urldate = {2017-07-26},
+	journal = {Physical Review Letters},
+	author = {Wagner, F. and Fussmann, G. and Grave, T. and Keilhacker, M. and Kornherr, M. and Lackner, K. and McCormick, K. and Müller, E. R. and Stäbler, A. and Becker, G. and Bernhardi, K. and Ditte, U. and Eberhagen, A. and Gehre, O. and Gernhardt, J. and Gierke, G. v. and Glock, E. and Gruber, O. and Haas, G. and Hesse, M. and Janeschitz, G. and Karger, F. and Kissel, S. and Klüber, O. and Lisitano, G. and Mayer, H. M. and Meisel, D. and Mertens, V. and Murmann, H. and Poschenrieder, W. and Rapp, H. and Röhr, H. and Ryter, F. and Schneider, F. and Siller, G. and Smeulders, P. and Söldner, F. and Speth, E. and Steuer, K. -H. and Szymanski, Z. and Vollmer, O.},
+	month = oct,
+	year = {1984},
+	pages = {1453--1456}
+}
+
 @article{mcdermott_edge_2009,
 	title = {Edge radial electric field structure and its connections to {H}-mode confinement in {Alcator} {C}-{Mod} plasmas},
 	volume = {16},
@@ -52,7 +123,7 @@
 	issn = {0741-3335},
 	url = {http://stacks.iop.org/0741-3335/39/i=12/a=008},
 	doi = {10.1088/0741-3335/39/12/008},
-	abstract = {Local edge parameters on the ASDEX Upgrade tokamak are investigated at the L-mode to H-mode transition, during phases with various types of edge-localized modes (ELMs), and at the density limit. A scaling law for the boundary electron temperature, \#\#IMG\#\# [http://ej.iop.org/images/0741-3335/39/12/008/img17.gif] , is found which describes the H-mode threshold for deuterium-puffed discharges with favourable ion \#\#IMG\#\# [http://ej.iop.org/images/0741-3335/39/12/008/img18.gif] -drift direction. The region of stable operation is bounded by type I ELMs near the ideal ballooning limit and by a minimum temperature necessary to avoid thermal instability of the plasma edge. Stationary operation with type III ELMs imposes an upper limit on the edge temperature. Within the entire range of boundary densities investigated \#\#IMG\#\# [http://ej.iop.org/images/0741-3335/39/12/008/img19.gif] , both L-mode and H-mode are found to be accessible. During type I ELMy H-mode, a relation of global confinement with the edge pressure gradient is found which is connected with a loss of the favourable density dependence predicted by the ITER-92P and ITER-93H ELMy H-mode scalings. At high density, better confinement is achieved in H-modes with an edge pressure gradient below the ideal ballooning limit, e.g. during type III ELMy H-mode with impurity-seeded radiation.},
+	abstract = {Local edge parameters on the ASDEX Upgrade tokamak are investigated at the L-mode to H-mode transition, during phases with various types of edge-localized modes (ELMs), and at the density limit. A scaling law for the boundary electron temperature is found which describes the H-mode threshold for deuterium-puffed discharges with favourable ion-drift direction. The region of stable operation is bounded by type I ELMs near the ideal ballooning limit and by a minimum temperature necessary to avoid thermal instability of the plasma edge. Stationary operation with type III ELMs imposes an upper limit on the edge temperature. Within the entire range of boundary densities investigated, both L-mode and H-mode are found to be accessible. During type I ELMy H-mode, a relation of global confinement with the edge pressure gradient is found which is connected with a loss of the favourable density dependence predicted by the ITER-92P and ITER-93H ELMy H-mode scalings. At high density, better confinement is achieved in H-modes with an edge pressure gradient below the ideal ballooning limit, e.g. during type III ELMy H-mode with impurity-seeded radiation.},
 	language = {en},
 	number = {12},
 	urldate = {2017-05-16},
@@ -136,7 +207,7 @@
 	issn = {1070-664X},
 	url = {http://aip.scitation.org/doi/10.1063/1.4753931},
 	doi = {10.1063/1.4753931},
-	abstract = {We investigate the dynamics of the low(L) →→{\textless}math display="inline" overflow="scroll" altimg="eq-00001.gif"{\textgreater}{\textless}mo{\textgreater}→{\textless}/mo{\textgreater}{\textless}/math{\textgreater} high(H) transition using a time-dependent, one dimensional (in radius) model which self-consistently describes the time evolution of zonal flows (ZFs), mean flows (MFs), poloidal spin-up, and density and pressure profiles. The model represents the physics of ZF and MF competition, turbulence suppression via E×BE×B{\textless}math display="inline" overflow="scroll" altimg="eq-00002.gif"{\textgreater}{\textless}mrow{\textgreater}{\textless}mi{\textgreater}E{\textless}/mi{\textgreater}{\textless}mo{\textgreater}×{\textless}/mo{\textgreater}{\textless}mi{\textgreater}B{\textless}/mi{\textgreater}{\textless}/mrow{\textgreater}{\textless}/math{\textgreater} shearing, and poloidal flows driven by turbulence. Numerical solutions of this model show that the L→HL→H{\textless}math display="inline" overflow="scroll" altimg="eq-00003.gif"{\textgreater}{\textless}mrow{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}L{\textless}/mi{\textgreater}{\textless}mo{\textgreater}→{\textless}/mo{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}H{\textless}/mi{\textgreater}{\textless}/mrow{\textgreater}{\textless}/math{\textgreater} transition can occur via an intermediate phase (I-phase) which involves oscillations of profiles due to ZF and MF competition. The I-phase appears as a nonlinear transition wave originating at the edge boundary and propagates inward. Locally, I-phase exhibits the characteristics of a limit-cycle oscillation. All these observations are consistent with recent experimental results. We examine the trigger of the L→HL→H{\textless}math display="inline" overflow="scroll" altimg="eq-00004.gif"{\textgreater}{\textless}mrow{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}L{\textless}/mi{\textgreater}{\textless}mo{\textgreater}→{\textless}/mo{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}H{\textless}/mi{\textgreater}{\textless}/mrow{\textgreater}{\textless}/math{\textgreater} transition, by defining a ratio of the rate of energy transfer from the turbulence to the zonal flow to the rate of energy input into the turbulence. When the ratio exceeds order unity, ZF shear gains energy, and a net decay of the turbulence is possible, thus triggering the L→HL→H{\textless}math display="inline" overflow="scroll" altimg="eq-00005.gif"{\textgreater}{\textless}mrow{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}L{\textless}/mi{\textgreater}{\textless}mo{\textgreater}→{\textless}/mo{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}H{\textless}/mi{\textgreater}{\textless}/mrow{\textgreater}{\textless}/math{\textgreater} transition. Numerical calculations indicate that the L→HL→H{\textless}math display="inline" overflow="scroll" altimg="eq-00006.gif"{\textgreater}{\textless}mrow{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}L{\textless}/mi{\textgreater}{\textless}mo{\textgreater}→{\textless}/mo{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}H{\textless}/mi{\textgreater}{\textless}/mrow{\textgreater}{\textless}/math{\textgreater} transition is triggered by this peak of the normalized ZF shearing. Zonal flows act as “reservoir,” in which to store increasing fluctuation energy without increasing transport, thus allowing the mean flow shear to increase and lock in the transition. A counterpart of the L →→{\textless}math display="inline" overflow="scroll" altimg="eq-00007.gif"{\textgreater}{\textless}mo{\textgreater}→{\textless}/mo{\textgreater}{\textless}/math{\textgreater} I→HI→H{\textless}math display="inline" overflow="scroll" altimg="eq-00008.gif"{\textgreater}{\textless}mrow{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}I{\textless}/mi{\textgreater}{\textless}mo{\textgreater}→{\textless}/mo{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}H{\textless}/mi{\textgreater}{\textless}/mrow{\textgreater}{\textless}/math{\textgreater} transition, i.e., an L→HL→H{\textless}math display="inline" overflow="scroll" altimg="eq-00009.gif"{\textgreater}{\textless}mrow{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}L{\textless}/mi{\textgreater}{\textless}mo{\textgreater}→{\textless}/mo{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}H{\textless}/mi{\textgreater}{\textless}/mrow{\textgreater}{\textless}/math{\textgreater} transition without I-phase, is obtained in a fast power ramp, for which I-phase is compressed into a single burst of ZF, which triggers the transition. Effects of neutral charge exchange on the L→HL→H{\textless}math display="inline" overflow="scroll" altimg="eq-00010.gif"{\textgreater}{\textless}mrow{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}L{\textless}/mi{\textgreater}{\textless}mo{\textgreater}→{\textless}/mo{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}H{\textless}/mi{\textgreater}{\textless}/mrow{\textgreater}{\textless}/math{\textgreater} transition are studied by varying ZF damping and neoclassical viscosity. Results show that the predicted L→HL→H{\textless}math display="inline" overflow="scroll" altimg="eq-00011.gif"{\textgreater}{\textless}mrow{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}L{\textless}/mi{\textgreater}{\textless}mo{\textgreater}→{\textless}/mo{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}H{\textless}/mi{\textgreater}{\textless}/mrow{\textgreater}{\textless}/math{\textgreater} transition power increases when either ZF damping or viscosity increase, suggesting a link between recycling, ZF damping, and the L→HL→H{\textless}math display="inline" overflow="scroll" altimg="eq-00012.gif"{\textgreater}{\textless}mrow{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}L{\textless}/mi{\textgreater}{\textless}mo{\textgreater}→{\textless}/mo{\textgreater}{\textless}mi mathvariant="normal"{\textgreater}H{\textless}/mi{\textgreater}{\textless}/mrow{\textgreater}{\textless}/math{\textgreater} threshold. Studies of fueling effects on the transition and pedestal structure with an emphasis on the particle pinch are reported.},
+	abstract = {We investigate the dynamics of the low(L) -{\textgreater} high(H) transition using a time-dependent, one dimensional (in radius) model which self-consistently describes the time evolution of zonal flows (ZFs), mean flows (MFs), poloidal spin-up, and density and pressure profiles. The model represents the physics of ZF and MF competition, turbulence suppression via ExB shearing, and poloidal flows driven by turbulence. Numerical solutions of this model show that the L -{\textgreater} H transition can occur via an intermediate phase (I-phase) which involves oscillations of profiles due to ZF and MF competition. The I-phase appears as a nonlinear transition wave originating at the edge boundary and propagates inward. Locally, I-phase exhibits the characteristics of a limit-cycle oscillation. All these observations are consistent with recent experimental results. We examine the trigger of the L -{\textgreater} H transition, by defining a ratio of the rate of energy transfer from the turbulence to the zonal flow to the rate of energy input into the turbulence. When the ratio exceeds order unity, ZF shear gains energy, and a net decay of the turbulence is possible, thus triggering the L -{\textgreater} H transition. Numerical calculations indicate that the L -{\textgreater} H transition is triggered by this peak of the normalized ZF shearing. Zonal flows act as “reservoir,” in which to store increasing fluctuation energy without increasing transport, thus allowing the mean flow shear to increase and lock in the transition. A counterpart of the L -{\textgreater} I -{\textgreater} H transition, i.e., an L -{\textgreater} H transition without I-phase, is obtained in a fast power ramp, for which I-phase is compressed into a single burst of ZF, which triggers the transition. Effects of neutral charge exchange on the L -{\textgreater} H transition are studied by varying ZF damping and neoclassical viscosity. Results show that the predicted L -{\textgreater} H transition power increases when either ZF damping or viscosity increase, suggesting a link between recycling, ZF damping, and the L -{\textgreater} H threshold. Studies of fueling effects on the transition and pedestal structure with an emphasis on the particle pinch are reported.},
 	number = {9},
 	urldate = {2017-05-15},
 	journal = {Physics of Plasmas},
@@ -167,21 +238,6 @@
 	author = {Weymiens, W.},
 	month = apr,
 	year = {2014}
-}
-
-@article{itoh_edge_1991,
-	title = {Edge localized mode activity as a limit cycle in tokamak plasmas},
-	volume = {67},
-	url = {https://link.aps.org/doi/10.1103/PhysRevLett.67.2485},
-	doi = {10.1103/PhysRevLett.67.2485},
-	abstract = {A model of edge localized modes in tokamak plasmas is presented. A limit-cycle solution is found in the transport equation (time-dependent Ginzburg-Landau type), which has a hysteresis curve for the gradient versus the flux. A periodic oscillation of the particle outflux and an L-H intermediate state are predicted near the L-H transition boundary. A mesophase in spatial structure appears near the edge.},
-	number = {18},
-	urldate = {2017-05-08},
-	journal = {Physical Review Letters},
-	author = {Itoh, Sanae-I. and Itoh, Kimitaka and Fukuyama, Atsushi and Miura, Yukitoshi},
-	month = oct,
-	year = {1991},
-	pages = {2485--2488}
 }
 
 @article{rozhansky_modelling_2002,
@@ -262,21 +318,6 @@
 	title = {Plasma {Physics} and {Fusion} {Energy}},
 	isbn = {978-0-521-85107-7},
 	publisher = {Cambridge University Press},
-	author = {Freidberg, Jeffrey},
+	author = {Freidberg, Jeffrey P.},
 	year = {2007}
-}
-
-@article{wagner_development_1984,
-	title = {Development of an {Edge} {Transport} {Barrier} at the {H}-{Mode} {Transition} of {ASDEX}},
-	volume = {53},
-	url = {https://link.aps.org/doi/10.1103/PhysRevLett.53.1453},
-	doi = {10.1103/PhysRevLett.53.1453},
-	abstract = {The thermal wave of a minor disruption can initiate the H phase of a neutral-beam-heated divertor tokamak discharge. Its propagation is used to probe the plasma edge conditions at the H transition. The results show the existence of a transport barrier which forms at the plasma edge and impedes the flow of particles and energy across the plasma surface, giving rise to improved confinement properties. Location and extension of the barrier coincide with the edge zone of increased shear specific to the divertor configuration.},
-	number = {15},
-	urldate = {2017-07-26},
-	journal = {Physical Review Letters},
-	author = {Wagner, F. and Fussmann, G. and Grave, T. and Keilhacker, M. and Kornherr, M. and Lackner, K. and McCormick, K. and Müller, E. R. and Stäbler, A. and Becker, G. and Bernhardi, K. and Ditte, U. and Eberhagen, A. and Gehre, O. and Gernhardt, J. and Gierke, G. v. and Glock, E. and Gruber, O. and Haas, G. and Hesse, M. and Janeschitz, G. and Karger, F. and Kissel, S. and Klüber, O. and Lisitano, G. and Mayer, H. M. and Meisel, D. and Mertens, V. and Murmann, H. and Poschenrieder, W. and Rapp, H. and Röhr, H. and Ryter, F. and Schneider, F. and Siller, G. and Smeulders, P. and Söldner, F. and Speth, E. and Steuer, K. -H. and Szymanski, Z. and Vollmer, O.},
-	month = oct,
-	year = {1984},
-	pages = {1453--1456}
 }
