--- a/References/References.bib
+++ b/References/References.bib
@@ -64,7 +64,7 @@
 	number = {15},
 	urldate = {2017-07-26},
 	journal = {Physical Review Letters},
-	author = {Wagner, F. and Fussmann, G. and Grave, T. and Keilhacker, M. and Kornherr, M. and Lackner, K. and McCormick, K. and Müller, E. R. and Stäbler, A. and Becker, G. and Bernhardi, K. and Ditte, U. and Eberhagen, A. and Gehre, O. and Gernhardt, J. and Gierke, G. v. and Glock, E. and Gruber, O. and Haas, G. and Hesse, M. and Janeschitz, G. and Karger, F. and Kissel, S. and Klüber, O. and Lisitano, G. and Mayer, H. M. and Meisel, D. and Mertens, V. and Murmann, H. and Poschenrieder, W. and Rapp, H. and Röhr, H. and Ryter, F. and Schneider, F. and Siller, G. and Smeulders, P. and Söldner, F. and Speth, E. and Steuer, K. -H. and Szymanski, Z. and Vollmer, O.},
+	author = {Wagner, F. and others},
 	month = oct,
 	year = {1984},
 	pages = {1453--1456}
@@ -320,4 +320,35 @@
 	publisher = {Cambridge University Press},
 	author = {Freidberg, Jeffrey P.},
 	year = {2007}
+}
+
+@article{itoh_solitary_1998,
+	title = {Solitary radial electric field structure in tokamak plasmas},
+	volume = {5},
+	issn = {1070-664X},
+	url = {http://aip.scitation.org/doi/abs/10.1063/1.873145},
+	doi = {10.1063/1.873145},
+	number = {12},
+	urldate = {2017-08-02},
+	journal = {Physics of Plasmas},
+	author = {Itoh, K. and Itoh, S.-I. and Yagi, M. and Fukuyama, A.},
+	month = nov,
+	year = {1998},
+	pages = {4121--4123}
+}
+
+@article{callen_toroidal_2009,
+	title = {Toroidal flow and radial particle flux in tokamak plasmas},
+	volume = {16},
+	issn = {1070-664X},
+	url = {http://aip.scitation.org/doi/abs/10.1063/1.3206976},
+	doi = {10.1063/1.3206976},
+	abstract = {Many effects influence toroidal flow evolution in tokamak plasmas. Momentum sources and radial plasma transport due to collisional processes and microturbulence-induced anomalous transport are usually considered. In addition, toroidal flow can be affected by nonaxisymmetric magnetic fields; resonant components cause localized electromagnetic toroidal torques near rational surfaces in flowing plasmas and nonresonant components induce "global" toroidal flow damping torque throughout the plasma. Also, poloidal magnetic field transients on the magnetic field diffusion time scale can influence plasma transport. Many of these processes can also produce momentum pinch and intrinsic flow effects. This paper presents a comprehensive and self-consistent description of all these effects within a fluid moment context. Plasma processes on successive time scales (and constraints they impose) are considered sequentially: compressional Alfvén waves (Grad–Shafranov equilibrium and ion radial force balance), sound waves (pressure constant along a field line and incompressible flows within a flux surface), and ion collisions (damping of poloidal flow). Finally, plasma transport across magnetic flux surfaces is induced by the many second order (in the small gyroradius expansion) toroidal torque effects indicated above. Nonambipolar components of the induced particle transport fluxes produce radial plasma currents. Setting the flux surface average of the net radial current induced by all these effects to zero yields the transport-time-scale equation for evolution of the plasma toroidal flow. It includes a combination of global toroidal flow damping and resonant torques induced by nonaxisymmetric magnetic field components, poloidal magnetic field transients, and momentum source effects, as well as the usual collision- and microturbulence-induced transport. On the transport time scale, the plasma toroidal rotation determines the radial electric field for net ambipolar particle transport. The ultimate radial particle transport is composed of intrinsically ambipolar fluxes plus nonambipolar fluxes evaluated at this toroidal-rotation-determined radial electric field.},
+	number = {8},
+	urldate = {2017-08-02},
+	journal = {Physics of Plasmas},
+	author = {Callen, J. D. and Cole, A. J. and Hegna, C. C.},
+	month = aug,
+	year = {2009},
+	pages = {082504}
 }
