--- a/References/References.bib
+++ b/References/References.bib
@@ -1,4 +1,163 @@
 
+@article{bourdelle_l_2015,
+	title = {L to {H} mode transition: parametric dependencies of the temperature threshold},
+	volume = {55},
+	issn = {0029-5515},
+	shorttitle = {L to {H} mode transition},
+	url = {http://stacks.iop.org/0029-5515/55/i=7/a=073015},
+	doi = {10.1088/0029-5515/55/7/073015},
+	abstract = {The L to H mode transition occurs at a critical power which depends on various parameters, such as the magnetic field, the density, etc. Experimental evidence on various tokamaks (JET, ASDEX-Upgrade, DIII-D, Alcator C-Mod) points towards the existence of a critical temperature characterizing the transition. This criterion for the L-H transition is local and is therefore easier to be compared to theoretical approaches. In order to shed light on the mechanisms of the transition, simple theoretical ideas are used to derive a temperature threshold ( T th ). They are based on the stabilization of the underlying turbulence by a mean radial electric field shear. The nature of the turbulence varies as the collisionality decreases, from resistive ballooning modes to ion temperature gradient and trapped electron modes. The obtained parametric dependencies of the derived T th are tested versus magnetic field, density, effective charge. Various robust experimental observations are reproduced, in particular T th increases with magnetic field B and increases with density below the density roll-over observed on the power threshold.},
+	language = {en},
+	number = {7},
+	urldate = {2017-08-07},
+	journal = {Nuclear Fusion},
+	author = {Bourdelle, C. and Chôné, L. and Fedorczak, N. and Garbet, X. and Beyer, P. and Citrin, J. and Delabie, E. and Dif-Pradalier, G. and {G. Fuhr} and Loarte, A. and Maggi, C. F. and Militello, F. and Sarazin, Y. and Vermare, L. and Contributors, J. E. T.},
+	year = {2015},
+	keywords = {power laws, scaling laws},
+	pages = {073015}
+}
+
+@article{snipes_h_1996,
+	title = {H mode power threshold database for {ITER}},
+	volume = {36},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/36/i=9/a=I11},
+	doi = {10.1088/0029-5515/36/9/I11},
+	abstract = {The ITER Threshold Database, which at present comprises data from nine divertor tokamaks, is described. The main results are presented and discussed. The properties and dependences of the power threshold in individual devices are reviewed. In particular, the analysis shows a rather general linear dependence on magnetic field, but a non-monotonic density dependence that varies from device to device. Investigation of the combined database suggests that the threshold dependence P\_thres approximately = 0.3 n\_e B\_T R{\textasciicircum}2.5 shows reasonable agreement with the data. This expression yields P\_thres approximately = 150 MW at a density of 0.5*10{\textasciicircum}20 m{\textasciicircum}-3 for ITER. Other expressions with weaker size dependence, and therefore lower threshold power for ITER, are also discussed. Their agreement with the present data is poorer than that of the above expression. In addition, the database is investigated by statistical discriminant analysis. The edge data included at present are described and discussed. Finally, there is a discussion of the implications of the results for ITER},
+	language = {en},
+	number = {9},
+	urldate = {2017-08-07},
+	journal = {Nuclear Fusion},
+	author = {Snipes, J. A. and Granetz, R. S. and Greenwald, M. and Kardaun, O. J. W. F. and Kus, A. and Ryter, F. and Stroth, U. and Kollermeyer, J. and {S.J. Fielding} and Valovic, M. and DeBoo, J. C. and Carlstrom, T. N. and Schissel, D. P. and Thomsen, K. and Campbell, D. J. and {J.P. Christiansen} and Cordey, J. G. and Righi, E. and Miura, Y. and Suzuki, N. and Mori, M. and Matsuda, T. and Tamai, H. and Fukuda, T. and {Y. Kamada} and Matsuda, T. and Sato, M. and Takizuka, T. and Tsuchiya, K. and Kaye, S. M.},
+	year = {1996},
+	keywords = {power laws, scaling laws},
+	pages = {1217}
+}
+
+@article{ryter_progress_2002,
+	title = {Progress of the international {H}-mode power threshold database activity},
+	volume = {44},
+	issn = {0741-3335},
+	url = {http://stacks.iop.org/0741-3335/44/i=5A/a=345},
+	doi = {10.1088/0741-3335/44/5A/345},
+	abstract = {The International Global H-mode Threshold Database has been revised and cleaned from inadequate data for some tokamaks. This significantly reduces the scatter for the corresponding datasets. The resulting new analyses including all ten tokamaks yields results comparable to previous work. In this case, the uncertainties are essentially determined by the inability of the linear models to take the different dependencies into account with sufficient accuracy. However, restricting the database to a more homogeneous subset of medium and large size tokamaks with single-null elongated plasma shapes yields expressions with much lower scatter. In this case the contribution from the experimental scatter in the individual machines plays a role. These regressions are stable against excluding one tokamak in turn.},
+	language = {en},
+	number = {5A},
+	urldate = {2017-08-07},
+	journal = {Plasma Physics and Controlled Fusion},
+	author = {Ryter, F. and Group, the H.-mode Threshold Database},
+	year = {2002},
+	keywords = {power laws, scaling laws},
+	pages = {A415}
+}
+
+@article{burrell_effects_1997,
+	title = {Effects of {E}×{B} velocity shear and magnetic shear on turbulence and transport in magnetic confinement devices},
+	volume = {4},
+	issn = {1070-664X},
+	url = {http://aip.scitation.org/doi/abs/10.1063/1.872367},
+	doi = {10.1063/1.872367},
+	number = {5},
+	urldate = {2017-08-07},
+	journal = {Physics of Plasmas},
+	author = {Burrell, K. H.},
+	month = may,
+	year = {1997},
+	pages = {1499--1518}
+}
+
+@misc{arnoux_how_2009,
+	title = {How {Fritz} {Wagner} `discovered' the {H}-{Mode}},
+	url = {http://www.iter.org/newsline/86/659},
+	urldate = {2017-08-07},
+	journal = {How Fritz Wagner "discovered" the H-Mode},
+	author = {Arnoux, Robert},
+	month = jun,
+	year = {2009}
+}
+
+@article{veldman_degenerate_2016,
+	title = {Degenerate {Bogdanov}-{Takens} bifurcations in a one-dimensional transport model of a fusion plasma},
+	volume = {331},
+	issn = {0167-2789},
+	url = {http://adsabs.harvard.edu/abs/2016PhyD..331...13D},
+	doi = {10.1016/j.physd.2016.05.008},
+	abstract = {Experiments in tokamaks (nuclear fusion reactors) have shown two modes 
+of operation: L-mode and H-mode. Transitions between these two modes
+have been observed in three types: sharp, smooth and oscillatory. The
+same modes of operation and transitions between them have been observed
+in simplified transport models of the fusion plasma in one spatial
+dimension. We study the dynamics in such a one-dimensional transport
+model by numerical continuation techniques. To this end the MATLAB
+package CL\_MATCONTL was extended with the continuation of
+(codimension-2) Bogdanov-Takens bifurcations in three parameters using
+subspace reduction techniques. During the continuation of
+(codimension-2) Bogdanov-Takens bifurcations in 3 parameters,
+generically degenerate Bogdanov-Takens bifurcations of codimension-3 are
+detected. However, when these techniques are applied to the transport
+model, we detect a degenerate Bogdanov-Takens bifurcation of codimension
+4. The nearby 1- and 2-parameter slices are in agreement with the
+presence of this codimension-4 degenerate Bogdanov-Takens bifurcation,
+and all three types of L-H transitions can be recognized in these
+slices. The same codimension-4 situation is observed under variation of
+the additional parameters in the model, and under some modifications of
+the model.},
+	urldate = {2017-08-04},
+	journal = {Physica D Nonlinear Phenomena},
+	author = {Veldman, D. W. M. and de Blank, H. J. and Pekkér, M. J. and Kuznetsov, Yu. A.},
+	month = sep,
+	year = {2016},
+	keywords = {Bifurcations theory, L-H transition, Large-scale systems, MATLAB, Numerical continuation},
+	pages = {13--26}
+}
+
+@article{burrell_role_1994,
+	title = {Role of the radial electric field in the transition from {L} (low) mode to {H} (high) mode to {VH} (very high) mode in the {DIII}‐{D} tokamak*},
+	volume = {1},
+	issn = {1070-664X},
+	url = {http://aip.scitation.org/doi/abs/10.1063/1.870705},
+	doi = {10.1063/1.870705},
+	abstract = {The hypothesis of stabilization of turbulence by shear in the ExB drift speed successfully predicts the observed turbulence reduction and confinement improvement seen at the L (low)–H (high) transition; in addition, the observed levels of ExB shear significantly exceed the value theoretically required to stabilize turbulence. Furthermore, this same hypothesis is the best explanation to date for the further confinement improvement seen in the plasma core when the plasma goes from the H mode to the VH (very high) mode. Consequently, the most fundamental question for H‐mode studies now is: How is the electric field E\_r formed? The radial force balance equation relates E\_r to the main ion pressure gradient ∇P\_i, poloidal rotation v\_θi, and toroidal rotation v\_φi. In the plasma edge, observations show ∇P\_i and v\_θi are the important terms at the L–H transition, with ∇P\_i being the dominant, negative term throughout most of the H mode. In the plasma core, E\_r is primarily related to v\_φi. There is a clear temporal and spatial correlation between the change in ExB shear and the region of local confinement improvement when the plasma goes from the H mode to the VH mode. Direct manipulation of the v\_φi and ExB shear using the drag produced by a nonaxisymmetric magnetic perturbation has produced clear changes in local transport, consistent with the ExB shear stabilization hypothesis. The implications of these results for theories of the L–H and H–VH transitions will be discussed.},
+	number = {5},
+	urldate = {2017-08-04},
+	journal = {Physics of Plasmas},
+	author = {Burrell, K. H. and Doyle, E. J. and Gohil, P. and Groebner, R. J. and Kim, J. and La Haye, R. J. and Lao, L. L. and Moyer, R. A. and Osborne, T. H. and Peebles, W. A. and Rettig, C. L. and Rhodes, T. H. and Thomas, D. M.},
+	month = may,
+	year = {1994},
+	pages = {1536--1544}
+}
+
+@article{itoh_solitary_1998,
+	title = {Solitary radial electric field structure in tokamak plasmas},
+	volume = {5},
+	issn = {1070-664X},
+	url = {http://aip.scitation.org/doi/abs/10.1063/1.873145},
+	doi = {10.1063/1.873145},
+	number = {12},
+	urldate = {2017-08-02},
+	journal = {Physics of Plasmas},
+	author = {Itoh, K. and Itoh, S.-I. and Yagi, M. and Fukuyama, A.},
+	month = nov,
+	year = {1998},
+	pages = {4121--4123}
+}
+
+@article{callen_toroidal_2009,
+	title = {Toroidal flow and radial particle flux in tokamak plasmas},
+	volume = {16},
+	issn = {1070-664X},
+	url = {http://aip.scitation.org/doi/abs/10.1063/1.3206976},
+	doi = {10.1063/1.3206976},
+	abstract = {Many effects influence toroidal flow evolution in tokamak plasmas. Momentum sources and radial plasma transport due to collisional processes and microturbulence-induced anomalous transport are usually considered. In addition, toroidal flow can be affected by nonaxisymmetric magnetic fields; resonant components cause localized electromagnetic toroidal torques near rational surfaces in flowing plasmas and nonresonant components induce "global" toroidal flow damping torque throughout the plasma. Also, poloidal magnetic field transients on the magnetic field diffusion time scale can influence plasma transport. Many of these processes can also produce momentum pinch and intrinsic flow effects. This paper presents a comprehensive and self-consistent description of all these effects within a fluid moment context. Plasma processes on successive time scales (and constraints they impose) are considered sequentially: compressional Alfvén waves (Grad–Shafranov equilibrium and ion radial force balance), sound waves (pressure constant along a field line and incompressible flows within a flux surface), and ion collisions (damping of poloidal flow). Finally, plasma transport across magnetic flux surfaces is induced by the many second order (in the small gyroradius expansion) toroidal torque effects indicated above. Nonambipolar components of the induced particle transport fluxes produce radial plasma currents. Setting the flux surface average of the net radial current induced by all these effects to zero yields the transport-time-scale equation for evolution of the plasma toroidal flow. It includes a combination of global toroidal flow damping and resonant torques induced by nonaxisymmetric magnetic field components, poloidal magnetic field transients, and momentum source effects, as well as the usual collision- and microturbulence-induced transport. On the transport time scale, the plasma toroidal rotation determines the radial electric field for net ambipolar particle transport. The ultimate radial particle transport is composed of intrinsically ambipolar fluxes plus nonambipolar fluxes evaluated at this toroidal-rotation-determined radial electric field.},
+	number = {8},
+	urldate = {2017-08-02},
+	journal = {Physics of Plasmas},
+	author = {Callen, J. D. and Cole, A. J. and Hegna, C. C.},
+	month = aug,
+	year = {2009},
+	pages = {082504}
+}
+
 @article{itoh_edge_1991,
 	title = {Edge localized mode activity as a limit cycle in tokamak plasmas},
 	volume = {67},
@@ -64,7 +223,7 @@
 	number = {15},
 	urldate = {2017-07-26},
 	journal = {Physical Review Letters},
-	author = {Wagner, F. and others},
+	author = {Wagner, F. and Fussmann, G. and Grave, T. and Keilhacker, M. and Kornherr, M. and Lackner, K. and McCormick, K. and Müller, E. R. and Stäbler, A. and Becker, G. and Bernhardi, K. and Ditte, U. and Eberhagen, A. and Gehre, O. and Gernhardt, J. and Gierke, G. v. and Glock, E. and Gruber, O. and Haas, G. and Hesse, M. and Janeschitz, G. and Karger, F. and Kissel, S. and Klüber, O. and Lisitano, G. and Mayer, H. M. and Meisel, D. and Mertens, V. and Murmann, H. and Poschenrieder, W. and Rapp, H. and Röhr, H. and Ryter, F. and Schneider, F. and Siller, G. and Smeulders, P. and Söldner, F. and Speth, E. and Steuer, K. -H. and Szymanski, Z. and Vollmer, O.},
 	month = oct,
 	year = {1984},
 	pages = {1453--1456}
@@ -217,6 +376,30 @@
 	pages = {092306}
 }
 
+@article{weymiens_comparison_2014,
+	title = {Comparison of bifurcation dynamics of turbulent transport models for the {L}-{H} transition},
+	volume = {21},
+	issn = {1070-664X},
+	url = {http://aip.scitation.org/doi/10.1063/1.4871856},
+	doi = {10.1063/1.4871856},
+	abstract = {In more than three decades, a large amount of models and mechanisms have been proposed to describe a very beneficial feature of magnetically confined fusion plasmas: the L-H transition. Bifurcation theory can be used to compare these different models based on their dynamical transition structure. In this paper, we employ bifurcation theory to distinguish two fundamentally different descriptions of the interaction between turbulence levels and sheared flows. The analytic bifurcation analysis characterises the parameter space structure of the transition dynamics. Herewith, in these models three dynamically different types of transitions are characterised, sharp transitions, oscillatory transitions, and smooth transitions. One of the two models has a very robust transition structure and is therefore likely to be more accurate for such a robust phenomenon as the L-H transition. The other model needs more fine-tuning to get non-oscillatory transitions. These conclusions from the analytic bifurcation analysis are confirmed by dedicated numerical simulations, with the newly developed code Bifurcator.},
+	number = {5},
+	urldate = {2017-04-25},
+	journal = {Physics of Plasmas},
+	author = {Weymiens, W. and Paquay, S. and de Blank, H.J. and Hogeweij, G.M.D.},
+	month = may,
+	year = {2014},
+	pages = {052302}
+}
+
+@book{freidberg_plasma_2007,
+	title = {Plasma {Physics} and {Fusion} {Energy}},
+	isbn = {978-0-521-85107-7},
+	publisher = {Cambridge University Press},
+	author = {Freidberg, Jeffrey P.},
+	year = {2007}
+}
+
 @article{nielsen_simulation_2014,
 	title = {Simulation of transition dynamics to high confinement in fusion plasmas},
 	url = {http://arxiv.org/abs/1409.3186},
@@ -254,22 +437,6 @@
 	author = {Rozhansky, V. and Kaveeva, E. and Voskoboynikov, S. and Coster, D. and Bonnin, X. and Schneider, R.},
 	year = {2002},
 	pages = {1110}
-}
-
-@article{weymiens_comparison_2014,
-	title = {Comparison of bifurcation dynamics of turbulent transport models for the {L}-{H} transition},
-	volume = {21},
-	issn = {1070-664X},
-	url = {http://aip.scitation.org/doi/10.1063/1.4871856},
-	doi = {10.1063/1.4871856},
-	abstract = {In more than three decades, a large amount of models and mechanisms have been proposed to describe a very beneficial feature of magnetically confined fusion plasmas: the L-H transition. Bifurcation theory can be used to compare these different models based on their dynamical transition structure. In this paper, we employ bifurcation theory to distinguish two fundamentally different descriptions of the interaction between turbulence levels and sheared flows. The analytic bifurcation analysis characterises the parameter space structure of the transition dynamics. Herewith, in these models three dynamically different types of transitions are characterised, sharp transitions, oscillatory transitions, and smooth transitions. One of the two models has a very robust transition structure and is therefore likely to be more accurate for such a robust phenomenon as the L-H transition. The other model needs more fine-tuning to get non-oscillatory transitions. These conclusions from the analytic bifurcation analysis are confirmed by dedicated numerical simulations, with the newly developed code Bifurcator.},
-	number = {5},
-	urldate = {2017-04-25},
-	journal = {Physics of Plasmas},
-	author = {Weymiens, W. and Paquay, S. and de Blank, H.J. and Hogeweij, G.M.D.},
-	month = may,
-	year = {2014},
-	pages = {052302}
 }
 
 @book{schnack_lectures_2009,
@@ -314,41 +481,3 @@
 	year = {1987}
 }
 
-@book{freidberg_plasma_2007,
-	title = {Plasma {Physics} and {Fusion} {Energy}},
-	isbn = {978-0-521-85107-7},
-	publisher = {Cambridge University Press},
-	author = {Freidberg, Jeffrey P.},
-	year = {2007}
-}
-
-@article{itoh_solitary_1998,
-	title = {Solitary radial electric field structure in tokamak plasmas},
-	volume = {5},
-	issn = {1070-664X},
-	url = {http://aip.scitation.org/doi/abs/10.1063/1.873145},
-	doi = {10.1063/1.873145},
-	number = {12},
-	urldate = {2017-08-02},
-	journal = {Physics of Plasmas},
-	author = {Itoh, K. and Itoh, S.-I. and Yagi, M. and Fukuyama, A.},
-	month = nov,
-	year = {1998},
-	pages = {4121--4123}
-}
-
-@article{callen_toroidal_2009,
-	title = {Toroidal flow and radial particle flux in tokamak plasmas},
-	volume = {16},
-	issn = {1070-664X},
-	url = {http://aip.scitation.org/doi/abs/10.1063/1.3206976},
-	doi = {10.1063/1.3206976},
-	abstract = {Many effects influence toroidal flow evolution in tokamak plasmas. Momentum sources and radial plasma transport due to collisional processes and microturbulence-induced anomalous transport are usually considered. In addition, toroidal flow can be affected by nonaxisymmetric magnetic fields; resonant components cause localized electromagnetic toroidal torques near rational surfaces in flowing plasmas and nonresonant components induce "global" toroidal flow damping torque throughout the plasma. Also, poloidal magnetic field transients on the magnetic field diffusion time scale can influence plasma transport. Many of these processes can also produce momentum pinch and intrinsic flow effects. This paper presents a comprehensive and self-consistent description of all these effects within a fluid moment context. Plasma processes on successive time scales (and constraints they impose) are considered sequentially: compressional Alfvén waves (Grad–Shafranov equilibrium and ion radial force balance), sound waves (pressure constant along a field line and incompressible flows within a flux surface), and ion collisions (damping of poloidal flow). Finally, plasma transport across magnetic flux surfaces is induced by the many second order (in the small gyroradius expansion) toroidal torque effects indicated above. Nonambipolar components of the induced particle transport fluxes produce radial plasma currents. Setting the flux surface average of the net radial current induced by all these effects to zero yields the transport-time-scale equation for evolution of the plasma toroidal flow. It includes a combination of global toroidal flow damping and resonant torques induced by nonaxisymmetric magnetic field components, poloidal magnetic field transients, and momentum source effects, as well as the usual collision- and microturbulence-induced transport. On the transport time scale, the plasma toroidal rotation determines the radial electric field for net ambipolar particle transport. The ultimate radial particle transport is composed of intrinsically ambipolar fluxes plus nonambipolar fluxes evaluated at this toroidal-rotation-determined radial electric field.},
-	number = {8},
-	urldate = {2017-08-02},
-	journal = {Physics of Plasmas},
-	author = {Callen, J. D. and Cole, A. J. and Hegna, C. C.},
-	month = aug,
-	year = {2009},
-	pages = {082504}
-}
