Next draft (hopefully near final)

--- a/References/References.bib
+++ b/References/References.bib
@@ -66,11 +66,12 @@
 	pages = {1499--1518}
 }
 
-@misc{arnoux_how_2009,
+@article{arnoux_how_2009,
 	title = {How {Fritz} {Wagner} `discovered' the {H}-{Mode}},
+	volume = {86},
 	url = {http://www.iter.org/newsline/86/659},
 	urldate = {2017-08-07},
-	journal = {How Fritz Wagner "discovered" the H-Mode},
+	journal = {ITER Newsline},
 	author = {Arnoux, Robert},
 	month = jun,
 	year = {2009}
