--- a/References/References.bib
+++ b/References/References.bib
@@ -67,14 +67,15 @@
 }
 
 @article{arnoux_how_2009,
-	title = {How {Fritz} {Wagner} `discovered' the {H}-{Mode}},
-	volume = {86},
+	edition = {86},
+	title = {How {Fritz} {Wagner} `discovered' the {H}-mode},
 	url = {http://www.iter.org/newsline/86/659},
 	urldate = {2017-08-07},
 	journal = {ITER Newsline},
 	author = {Arnoux, Robert},
 	month = jun,
-	year = {2009}
+	year = {2009},
+	keywords = {H-mode}
 }
 
 @article{veldman_degenerate_2016,
@@ -482,3 +483,14 @@ the model.},
 	year = {1987}
 }
 
+@article{stringer_ripple_1972,
+	author={T.E. Stringer},
+	title={Effect of the magnetic field ripple on diffusion in Tokamaks},
+	journal={Nuclear Fusion},
+	volume={12},
+	number={6},
+	pages={689},
+	url={http://stacks.iop.org/0029-5515/12/i=6/a=010},
+	year={1972},
+	abstract={The magnetic field modulation due to the discrete nature of the field coils in a Tokamak leads to additional particle trapping. The resulting diffusion is evaluated and compared with the neoclassical diffusion. The two diffusion rates are found to be comparable in existing Tokamaks. The limit on the field ripple below which ripple diffusion should be negligible in the next generation of machines is evaluated.}
+}
